--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -318,7 +318,7 @@
 
             <!-- Card 3 -->
             <div class="card">
-                <h3>Cloud Service Project</h3>
+                <h3>Cloud Service</h3>
                 <video controls>
                     <source src="{% static 'project_data/cloud_video.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
@@ -331,7 +331,7 @@
 
             <!-- Card 4 -->
             <div class="card">
-                <h3>Hardware Project</h3>
+                <h3> Value Added Services</h3>
                 <video controls>
                     <source src="{% static 'project_data/web_video.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
@@ -354,7 +354,7 @@
     <!-- Technologies Stack Section -->  
 
     <section id="tech-section">
-        <h2 class="tech-section-title"><u>Technologies Stack</u></h2>
+        <h2 class="tech-section-title"><u>Technology Stack</u></h2>
         <div class="tech-cards">
             <!-- Card 1: Slider -->
             <div class="tech-card tech-slider-card">
@@ -416,7 +416,7 @@
         <div class="achievements-text">
             <h2 class="achievements-title"><u>Achievements</u></h2>
             <p class="achievements-description">
-                TechnoWin IT Infra Pvt. Ltd. is a leader in providing innovative IT infrastructure solutions. We take pride in our industry-leading certifications and dedication to quality, security, and performance. Our team consistently strives for excellence to meet the growing demands of the global technology landscape.
+                Our Commitment to Quality and Continuous improvement have been the key factors for Techno Win’s Survival and Growth in the last 20 Years. While we are certified with the ISO 9001:2015 and ISO 27001:2013 which ensures that our final products or services meet customer requirements and conforms to specific standards, we are also certified with the CMMI Maturity Level 3 Certification which certifies our ability to improve processes and continuously deliver high-quality products or services. Some of our Applications have undergone VAPT and are awarded the CERT-IN certification.
             </p>
         </div>
 
@@ -457,12 +457,12 @@
         <div class="client-slider">
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/tata.png' %}" alt="Client 1" class="client-logo">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">
                 
             </div>
             <!-- Client Logo 2 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 2" class="client-logo">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 2" class="client-logo">
                 
             </div>
             <!-- Client Logo 3 -->
@@ -477,7 +477,7 @@
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/microsoft.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
@@ -767,13 +767,13 @@
         <div class='carousel__item'>
             <div class='carousel__item-head'>
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 1">
+                    <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 1">
                 </div>
             </div>
             <div class='carousel__item-body'>
-                <h3 class="feedback-name">John Doe</h3>
-                <p class="feedback-post">CEO at Example Inc.</p>
-                <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
+                <h3 class="feedback-name">Dr Jagmeet Madan</h3>
+                <p class="feedback-post">Principal SVT</p>
+                <p class="feedback-description">"The KRC works as we had envisaged and still going good. Thanks to Technowin"</p>
             <div class="feedback-stars">
                 <span class="star">★</span>
                 <span class="star">★</span>
@@ -790,9 +790,9 @@
                 </div>
             </div>
             <div class='carousel__item-body'>
-                <h3 class="feedback-name">Jane Smith</h3>
-                <p class="feedback-post">Founder at Tech Innovators</p>
-                <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
+                <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                <p class="feedback-post">Director LKN Consultants</p>
+                <p class="feedback-description">"Impressed with their work with Salay Register, we awarded Audit Software which again brought excellent result"</p>
             <div class="feedback-stars">
                 <span class="star">★</span>
                 <span class="star">★</span>
@@ -805,13 +805,13 @@
         <div class='carousel__item'>
             <div class='carousel__item-head'>
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/cidco.png' %}" alt="Feedback 3">
+                    <img src="{% static 'client_logo/mvst.png' %}" alt="Feedback 3">
                 </div>
             </div>
             <div class='carousel__item-body'>
-                <h3 class="feedback-name">Alice Johnson</h3>
-                    <p class="feedback-post">CTO at Future Tech</p>
-                    <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
+                <h3 class="feedback-name">Dr. Ramnath Subramaniam</h3>
+                    <p class="feedback-post">CEO MVSTF Govt. of Maharashtra</p>
+                    <p class="feedback-description">"We appreciate your Services and Deliveries."</p>
             <div class="feedback-stars">
                 <span class="star">★</span>
                 <span class="star">★</span>
@@ -824,13 +824,13 @@
         <div class='carousel__item'>
             <div class='carousel__item-head'>
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/navi_mumbai.png'  %}" alt="Feedback 4" >
+                    <img src="{% static 'client_logo/ace.png'  %}" alt="Feedback 4" >
                 </div>
             </div>
             <div class='carousel__item-body'>
-                <h3 class="feedback-name">Mark Williams</h3>
-                <p class="feedback-post">Product Manager at Innovations Ltd.</p>
-                <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
+                <h3 class="feedback-name">Mr. Suresh Salian</h3>
+                <p class="feedback-post">Proprietor ACE</p>
+                <p class="feedback-description">"I would certainly recommend this Software to any school looking to Digitalize their pricesses."</p>
             <div class="feedback-stars">
                 <span class="star">★</span>
                 <span class="star">★</span>
@@ -839,45 +839,6 @@
                 <span class="star">☆</span>
             </div>
             </div>
-        </div>
-        <div class='carousel__item'>
-            <div class='carousel__item-head'>
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/tata1.png' %}" alt="Feedback 1">
-                </div>
-            </div>
-            <div class='carousel__item-body'>
-                <h3 class="feedback-name">John Doe</h3>
-                <p class="feedback-post">CEO at Example Inc.</p>
-                <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
-            <div class="feedback-stars">
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">☆</span>
-            </div>
-            </div>
-        </div>
-        <div class='carousel__item'>
-            <div class='carousel__item-head'>
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/accenture.png'  %}" alt="Feedback 4">
-                </div>
-            </div>
-            <div class='carousel__item-body'>
-                <h3 class="feedback-name">Mark Williams</h3>
-                    <p class="feedback-post">Product Manager at Innovations Ltd.</p>
-                    <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
-            <div class="feedback-stars">
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">★</span>
-                <span class="star">☆</span>
-            </div>
-            </div>
-        </div>
         </div>
     </section>
 
