--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -90,13 +90,11 @@
           <!-- Row 4 -->
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Manpower</h3>
+              <h3 class="card-title">Supply of Manpower</h3>
               <p class="card-description">
-                TechnoWin IT Infra Pvt Ltd provides exceptional manpower
-                solutions 👷‍♂️🤝, connecting businesses with skilled professionals
-                🧑‍💼 to drive productivity and success. We focus on delivering the
-                right talent 💡 at the right time ⏰ to meet your organizational
-                goals efficiently 📈.
+                1 . Manpower Outsourcing Services <br>Hindustan Petroleum Corporation Limited (HPCL) <br>2. Providing Manpower for Data Entry Operation for (CIDCO) 
+                <br>City and Industrial Development  Corporation of Maharashtra Limited (CIDCO) <br>3. Providing Outsourced Manpower for Official Work <br>3. Providing Outsourced Manpower for Official Work 
+                <br>4. Manpower Outsourcing Services <br>Sports Authority of India (SAI) 
               </p>
             </div>
           </div>
@@ -125,13 +123,11 @@
           </div>
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Hardware</h3>
+              <h3 class="card-title">Hardware Supply</h3>
               <p class="card-description">
-                TechnoWin IT Infra Pvt Ltd offers reliable hardware solutions
-                💻⚡ that ensure seamless integration and performance for
-                businesses of all sizes 🏢. From advanced devices to
-                cutting-edge infrastructure 🖥️, our solutions are designed to
-                enhance productivity and operational efficiency 🔧📊.
+                1. Supply of 243 PC's in Customer care Department, BEST.Brihanmumbai Electric Supply & Transport (BEST) <br><br>
+                2. Supply of desktop computers & MFPs  in Sewerage Operations Department, MCGM.<br><br>
+                Municipal corporation of Greater Mumbai (MCGM) Sewerage Operations Department 
               </p>
             </div>
           </div>
@@ -141,13 +137,12 @@
           <!-- Row 5 -->
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Data Management</h3>
+              <h3 class="card-title"><u>Digitalization of Documents</u></h3>
               <p class="card-description">
-                At Technowin IT Infra Pvt Ltd, we provide comprehensive data
-                management solutions 📊🔒 that ensure your data is organized,
-                secure, and easily accessible. From data storage 🗄️ to backup
-                and recovery 🔄, we help businesses optimize their data
-                operations efficiently.
+                1. Work of data entry operations and others <br>Municipal Corporation of Greater Mumbai (MCGM) 
+              <br>2. Appointing Operators for Data Entry & Scanning <br>Maharashtra Housing and Area Development Authority (MHADA) <br>
+              3. Data entry and Scanning of Documents <br>Arceus Infotech Pvt. Ltd <br>4. Data Entry & Scanning of Documents & Files related to allotments of house under Rajiv Gandhi Housing Scheme 
+              <br>Maharashtra Housing and Area Development Mumbai (MCGM) <br>5. Supply of Manpower for  MCGM Octroi Project <br>Vidharbha Infotech Pvt. Ltd 
               </p>
             </div>
           </div>
@@ -161,7 +156,8 @@
             </div>
           </div>
         </div>
-        <br />
+        <br>
+    
         <div class="row">
           <!-- Row 5 -->
           <div class="col-md-6">
@@ -175,16 +171,20 @@
           </div>
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Program Management</h3>
+              <h3 class="card-title"><u>Hardware AMC</u></h3>
               <p class="card-description">
-                Our program management services 📅🛠 help streamline and oversee
-                multiple projects to ensure timely and cost-effective delivery.
-                Technowin IT Infra Pvt Ltd uses strategic planning 📊, risk
-                management ⚖️, and cross-team collaboration 🤝 to achieve your
-                business goals with precision.
-              </p>
+                1. Purchase order for Onsite Staff Support for Maintenance of Information Communication Technology systems Operations and Accessories.<br>S.N.D.T Women's College 
+                <br>2. Providing Maintenance services for Computer Hardware System at Octroi Department of MCGM <br>Brihanmumbai Mahanagar Palika (MCGM) 
+                  <br>3. Award for Annual Maintenance Contract of Computer Systems <br>Risk Management Centre for Customs Directorate General of Analytics Risk Management 
+                <br>4. AMC for Computers <br>Brihanmumbai Electrical supply & Transport Undertaking. <br>5. Comprehensive Annual Maintenance Contract For Desktop , Servers and other computer peripherals 
+                <br> The Municipal CO-OP  Bank Ltd Mumbai <br>6. Contract of  Desktop Computers ,Printers and other allied IT peripherals available in various units 
+                  <br> Department of Post Government of India <br>7. Contract for AMC of Computers and its peripherals for the period <br>Commissioner of Customs (preventive) 
+                <br>8. Contract of Computers, Printers , Scanners , LAN Switches with Local Area Networking etc.<br> Nehru Science Centre Museums (NSCM) 
+                <br> 9. Non - Comprehensive Annual Maintenance Contract of IT Equipment for PIB <br>Press Information Centre 
+                </p>
             </div>
           </div>
+         
         </div>
       </div>
     </section>
