--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -71,15 +71,16 @@
           </div>
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Cloud Computing</h3>
+              <h3 class="card-title"><u>Cloud Computing</u></h3>
               <p class="card-description">
-                TechnoWin IT Infra Pvt Ltd offers cutting-edge cloud computing
-                solutions 🌥️ designed to boost business efficiency and
-                scalability 🚀. Our secure, flexible, and cost-effective
-                services 💼 are tailored to meet the unique needs of each
-                client. With seamless data management 📊, enhanced collaboration
-                🤝, and increased business agility, we empower organizations to
-                scale operations and drive innovation with confidence 💡.
+                1. Accounting Software (Mondial) for Maharashtra Village Social Transformation and Foundation (MVSTF).<br>
+                2. Tally Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
+                3. College ERP Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
+                4. HRMS Software for Panvel Municipal Corporation (PMC).<br>
+                5. Integration of the Nakashe (LKN) Applications.<br>
+                6. Maintenance and Support of TISS SVE ERP, Admission Portal and Website.<br>
+                7. Other Applications developed and implemented by Technowin.<br>
+                
               </p>
             </div>
           </div>
@@ -90,7 +91,7 @@
           <!-- Row 4 -->
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Supply of Manpower</h3>
+              <h3 class="card-title"><u>Supply of Manpower</u></h3>
               <p class="card-description">
                 1 . Manpower Outsourcing Services <br>Hindustan Petroleum Corporation Limited (HPCL) <br>2. Providing Manpower for Data Entry Operation for (CIDCO) 
                 <br>City and Industrial Development  Corporation of Maharashtra Limited (CIDCO) <br>3. Providing Outsourced Manpower for Official Work <br>3. Providing Outsourced Manpower for Official Work 
@@ -123,7 +124,7 @@
           </div>
           <div class="col-md-6">
             <div class="card card-text">
-              <h3 class="card-title">Hardware Supply</h3>
+              <h3 class="card-title"><u>Hardware Supply</u></h3>
               <p class="card-description">
                 1. Supply of 243 PC's in Customer care Department, BEST.Brihanmumbai Electric Supply & Transport (BEST) <br><br>
                 2. Supply of desktop computers & MFPs  in Sewerage Operations Department, MCGM.<br><br>
